--- a/pizza/templates/pizza/order.html
+++ b/pizza/templates/pizza/order.html
@@ -2,22 +2,11 @@
 
 <h4> Order </h4>
 
+<h2>{{ note }}</h2>
+
 <form action="{% url 'pizza:create_order'  %}" method="post">
 
     {% csrf_token %}
-
-    <label for="size">Size:</label>
-    <select id="size" name="size">
-        <option value="small">Small</option>
-        <option value="medium">Medium</option>
-        <option value="large">Large</option>
-    </select>
-
-    <label for="topping1">Topping 1:</label>
-    <input id="topping1" type="text" name="topping1">
-
-    <label for="topping2">Topping 2:</label>
-    <input id="topping2" type="text" name="topping2">
-
+    {{ pizzaform }}
     <input type="submit" value="Confirm Your Order">
 </form>
