--- a/pizza/templates/pizza/order.html
+++ b/pizza/templates/pizza/order.html
@@ -10,10 +10,22 @@
 
 {#<form enctype="multipart/form-data" action="{% url 'pizza:create_order'  %}" method="post">#}
 
-<form action="{% url 'pizza:create_order' %}" method="post">
+<form action="{% url 'pizza:create_order' %}" method="post" novalidate>
 
     {% csrf_token %}
-    {{ pizzaform }}
+    <table>
+        {{ pizzaform.topping1.label_tag }}
+        {{ pizzaform.topping1 }}
+        {{ pizzaform.topping1.errors }}
+
+        {{ pizzaform.topping2.label_tag }}
+        {{ pizzaform.topping2 }}
+        {{ pizzaform.topping2.errors }}
+
+        <label for="{{ pizzaform.size.id_for_label }}">Size:</label>
+        {{ pizzaform.size }}
+        {{ pizzaform.size.errors }}
+    </table>
     <input type="submit" value="Confirm Your Order">
 </form>
 
