--- a/pizza/templates/pizza/home.html
+++ b/pizza/templates/pizza/home.html
@@ -1,7 +1,12 @@
-<h1> Welcome to Picolla </h1>
-<p>
-    To place your order - follow a link:
-    <p>
-    Order <a href="{% url 'pizza:create_order'%}"> HERE</a>
-    </p>
-</p>
+{% extends 'pizza/base.html' %}
+{% block 'body' %}
+    <div class="container">
+        <h1> Welcome to Picolla </h1>
+        <p>
+            To place your order - follow a link:
+        <p>
+            Order <a href="{% url 'pizza:create_order' %}"> HERE</a>
+        </p>
+        </p>
+    </div>
+{% endblock %}
