--- a/pizza/templates/pizza/order.html
+++ b/pizza/templates/pizza/order.html
@@ -1,39 +1,39 @@
-<h1> Welcome to Picolla </h1>
+{% extends 'pizza/base.html' %}
+{% block 'body' %}
+{% load widget_tweaks %}
 
-<h4> Order </h4>
+    <div class="container">
 
-<h2>{{ note }}</h2>
-<br><br>
-{% if created_pizza_pk %}
-    <a href="{% url 'pizza:edit_order' created_pizza_pk %}">Edit your Order!</a>
-{% endif %}
+    <h1>Order a pizza</h1>
+    <h2>{{ note }}</h2>
+    {% if created_pizza_pk %}
+    <a href="{% url 'pizza:edit_order' created_pizza_pk %}">Edit Your Order</a>
+    {% endif %}
 
-{#<form enctype="multipart/form-data" action="{% url 'pizza:create_order'  %}" method="post">#}
 
-<form action="{% url 'pizza:create_order' %}" method="post" novalidate>
 
-    {% csrf_token %}
-    <table>
-        {{ pizzaform.topping1.label_tag }}
-        {{ pizzaform.topping1 }}
-        {{ pizzaform.topping1.errors }}
+    <form action="{% url 'pizza:create_order' %}" method="post">
+        {% csrf_token %}
+        {% for field in pizzaform %}
+        <div class="form-group">
+        {{ field.errors }}
+        {{ field.label_tag }}
+        {% render_field field class="form-control" %}
+        </div>
+        {% endfor %}
+        <input type="submit" value="Order Pizza">
+    </form>
 
-        {{ pizzaform.topping2.label_tag }}
-        {{ pizzaform.topping2 }}
-        {{ pizzaform.topping2.errors }}
+    <br><br>
 
-        <label for="{{ pizzaform.size.id_for_label }}">Size:</label>
-        {{ pizzaform.size }}
-        {{ pizzaform.size.errors }}
-    </table>
-    <input type="submit" value="Confirm Your Order">
-</form>
+        Want more than one pizza?
 
-<br><br>
+    <form action="{% url 'pizza:pizzas' %}" method="get">
+        {{ multiple_form }}
+        <input type="submit" value="Get Pizzas">
+    </form> 
 
-What to order more than one?
 
-<form action="{% url 'pizza:pizzas' %}" method="get">
-    {{ multiple_form }}
-    <input type="submit" value="Get Pizzas">
-</form>
+    </div>
+
+{% endblock %}
