--- a/pizza/templates/pizza/pizzas.html
+++ b/pizza/templates/pizza/pizzas.html
@@ -1,25 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'pizza/base.html' %}
+{% block 'body' %}
     <h1>Order Pizzas</h1>
     <h2>{{ note }}</h2>
 
-    <form action="{% url 'pizza:pizzas' %}" method="post">
-        {% csrf_token %}
-        {{ formset.management_form }}
+    <div class="container">
 
-        {% for form in formset %}
+        <form action="{% url 'pizza:pizzas' %}" method="post">
+            {% csrf_token %}
+            {{ formset.management_form }}
 
-            {{ form }}
-            <br><br>
+            {% for form in formset %}
 
-        {% endfor %}
-    <input type="submit" value="Order Pizzas">
-    </form>
+                {{ form }}
+                <br><br>
 
-</body>
-</html>
+            {% endfor %}
+            <input type="submit" value="Order Pizzas">
+        </form>
+    </div>
+
+{% endblock %}
